up: alteracoes e correcoes gerais
